--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Press Any Key To Start
     <small data-subtitle class="subtitle hide"></small>
 </h1>
-<div data-bird class="bird"></div>
+<div data-bird class="bird" ><img src="assests/image/bird.png" alt="" class="img"></div>
 <script src="assests/script/script.js" type="module"></script>
 </body>
 </html>
